<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textColor="@color/darkB"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="30dp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_paragraph"
                android:textSize="13dp"
                android:id="@+id/about_description"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_eleven"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member1"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member2"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member3"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member4"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member5"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member6"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followthelink"
                    android:textSize="11dp"
                    android:id="@+id/followthelink"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:id="@+id/webAppLink"
                    android:text="@string/webAppLinkString"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>