<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Enter Username"
        android:ems="10"
        android:id="@+id/editText1" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2" />

    <TextView
        android:id="@+id/textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText3" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/confirm_pwd"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Re-enter Password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_account"/>

</LinearLayout>