<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/user_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Enter Username/Email"
        android:ems="10"
        android:id="@+id/editText1" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:gravity="center"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/new_user"/>

        <TextView
            android:id="@+id/sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="@color/blue"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/new_signup"/>

        </LinearLayout>

</LinearLayout>